--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,12 @@ jobs:
         service_account_key: ${{ secrets.GCP_SA_KEY }}
         export_default_credentials: true
 
+    - name: Authenticate with service account
+      run: |
+        echo "${{ secrets.GCP_SA_KEY }}" > "${HOME}/gcloud-key.json"
+        gcloud auth activate-service-account --key-file="${HOME}/gcloud-key.json"
+        gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
+
     - name: Deploy to Cloud Run
       run: |
         gcloud run deploy hello-cloudrun \
