--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,19 +13,19 @@ jobs:
     - name: Checkout repo
       uses: actions/checkout@v3
 
+    # Step 1: Authenticate using the correct action
+    - name: Authenticate to Google Cloud
+      uses: google-github-actions/auth@v2
+      with:
+        credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+    # Step 2: Set up gcloud CLI (after auth)
     - name: Set up Google Cloud SDK
       uses: google-github-actions/setup-gcloud@v1
       with:
         project_id: ${{ secrets.GCP_PROJECT_ID }}
-        service_account_key: ${{ secrets.GCP_SA_KEY }}
-        export_default_credentials: true
 
-    - name: Authenticate with service account
-      run: |
-        echo "${{ secrets.GCP_SA_KEY }}" > "${HOME}/gcloud-key.json"
-        gcloud auth activate-service-account --key-file="${HOME}/gcloud-key.json"
-        gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
-
+    # Step 3: Deploy to Cloud Run
     - name: Deploy to Cloud Run
       run: |
         gcloud run deploy hello-cloudrun \
