--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
           --region us-central1 \
           --platform managed \
           --allow-unauthenticated \
-          --entry-point "gunicorn app:app --bind :$PORT"
+          --entry-point "gunicorn app:main --bind :$PORT"
 
 
     # Step 4: Inject environment variable into the deployed service
